[gd_scene load_steps=24 format=3 uid="uid://cboqo8g0h6mrg"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ofxeh"]
[ext_resource type="SpriteFrames" uid="uid://y40f0dw8wfo7" path="res://Sprite Frames/Character.tres" id="2_08cxu"]
[ext_resource type="Shader" path="res://Scripts/FlashShader.gdshader" id="2_kx7hb"]
[ext_resource type="Script" path="res://Scripts/SoundClass.gd" id="2_yylox"]
[ext_resource type="AudioStream" uid="uid://bkktelppqdew6" path="res://Sounds/ShootSound.mp3" id="3_0nnw5"]
[ext_resource type="SpriteFrames" uid="uid://b0i8843pl6ys2" path="res://Sprite Frames/RotatingWeapon.tres" id="3_s150c"]
[ext_resource type="AudioStream" uid="uid://qn43fuqdfja5" path="res://Sounds/SwordSwipe.mp3" id="4_qonvk"]
[ext_resource type="Texture2D" uid="uid://m3vf5uw380ha" path="res://Sprites/SpawnThing.png" id="5_3dj44"]
[ext_resource type="AudioStream" uid="uid://bflo07tpafyvo" path="res://Sounds/TakeDamage.mp3" id="5_imcyh"]

[sub_resource type="Resource" id="Resource_6qy8l"]
script = ExtResource("2_yylox")
sound_file = ExtResource("3_0nnw5")
volume = -10.0

[sub_resource type="Resource" id="Resource_grbqb"]
script = ExtResource("2_yylox")
sound_file = ExtResource("4_qonvk")
volume = -20.0

[sub_resource type="Resource" id="Resource_ehbur"]
script = ExtResource("2_yylox")
sound_file = ExtResource("5_imcyh")
volume = -20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_isy7t"]
size = Vector2(8, 12)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p23e7"]
resource_local_to_scene = true
shader = ExtResource("2_kx7hb")
shader_parameter/flashColor = Color(1, 0.666667, 0.368627, 1)
shader_parameter/flashState = 0.0

[sub_resource type="Animation" id="Animation_3h1kb"]
resource_name = "Bullet_Fire"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletRender:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"refresh_shot"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BulletRender:default_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.933333, 0.933333, 0, 1), Color(1, 1, 0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ManaRegenTimer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop"
}, {
"args": [0],
"method": &"start"
}]
}

[sub_resource type="Animation" id="Animation_pe56w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletRender:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletRender:default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.933333, 0.933333, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite:material:shader_parameter/flashState")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpawnThing:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpawnThing:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 20)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RotatingSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RotatingSprite:material:shader_parameter/flashState")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"refresh_shot"
}]
}

[sub_resource type="Animation" id="Animation_xdygk"]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/flashState")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpawnThing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpawnThing:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.554785, 3.4822, 1),
"update": 0,
"values": [Vector2(1e-05, 20), Vector2(1, 20), Vector2(1e-05, 20)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RotatingSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RotatingSprite:material:shader_parameter/flashState")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Particles:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_processing"
}]
}

[sub_resource type="Animation" id="Animation_eqknn"]
resource_name = "Swing_Left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sword_rotation_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.210224, 1),
"update": 0,
"values": [30.0, -30.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"refresh_shot"
}]
}

[sub_resource type="Animation" id="Animation_dloo0"]
resource_name = "Swing_Right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sword_rotation_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-30.0, 30.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"refresh_shot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tekhw"]
_data = {
"Bullet_Fire": SubResource("Animation_3h1kb"),
"RESET": SubResource("Animation_pe56w"),
"Spawn": SubResource("Animation_xdygk"),
"Swing_Left": SubResource("Animation_eqknn"),
"Swing_Right": SubResource("Animation_dloo0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xbsc"]
size = Vector2(24, 24)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2xe3b"]
shader = ExtResource("2_kx7hb")
shader_parameter/flashColor = Color(1, 0.666667, 0.368627, 1)
shader_parameter/flashState = 0.0

[sub_resource type="Curve" id="Curve_tm5e8"]
max_value = 4.0
_data = [Vector2(0, 4), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(0, -1)
script = ExtResource("1_ofxeh")
shoot_sound = SubResource("Resource_6qy8l")
swing_sound = SubResource("Resource_grbqb")
damage_sound = SubResource("Resource_ehbur")
max_health = 15
bullet_min_range = 30.0
sword_move_amount = 6
max_sword_swings = 4
sword_knockback = 2.0

[node name="ManaRegenTimer" type="Timer" parent="."]
autostart = true

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_isy7t")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_p23e7")
sprite_frames = ExtResource("2_08cxu")
animation = &"Downfacing"
frame_progress = 0.352132

[node name="BulletRay" type="RayCast2D" parent="."]
enabled = false
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="BulletRender" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-25, 0, -7, 68)
width = 3.0
default_color = Color(0.933333, 0.933333, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tekhw")
}
autoplay = "Spawn"
playback_default_blend_time = 1.0

[node name="SwordCollider" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordCollider"]
shape = SubResource("RectangleShape2D_6xbsc")

[node name="RotatingSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_2xe3b")
sprite_frames = ExtResource("3_s150c")
animation = &"Sword"

[node name="SwordRefreshTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="SpawnThing" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(0, -153)
scale = Vector2(1e-05, 20)
texture = ExtResource("5_3dj44")

[node name="Particles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 137.57
gravity = Vector2(0, 200)
initial_velocity_min = 50.0
initial_velocity_max = 70.0
scale_amount_curve = SubResource("Curve_tm5e8")
color = Color(1, 0.666667, 0.368627, 1)

[connection signal="timeout" from="ManaRegenTimer" to="." method="_on_mana_regen_timer_timeout"]
[connection signal="timeout" from="SwordRefreshTimer" to="." method="_on_sword_refresh_timer_timeout"]
